Implement LeaveRequestCommand Add EmailSender Service And Use it

--- a/HR_Managment/HR_Managment.Application/HR_Managment.Application.csproj
+++ b/HR_Managment/HR_Managment.Application/HR_Managment.Application.csproj
@@ -17,4 +17,9 @@
     <ProjectReference Include="..\HR_Managment.Domain\HR_Managment.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\LeaveRequests\Handlers\Queries\" />
+    <Folder Include="Features\LeaveRequests\Requests\Queries\" />
+  </ItemGroup>
+
 </Project>
