--- a/HR_Managment/HR_Managment.Infrastructure/HR_Managment.Infrastructure.csproj
+++ b/HR_Managment/HR_Managment.Infrastructure/HR_Managment.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.13" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HR_Managment.Application\HR_Managment.Application.csproj" />
+  </ItemGroup>
+
 </Project>
