--- a/HR_Managment/HR_Managment.Api/appsettings.json
+++ b/HR_Managment/HR_Managment.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
-    "ConnectionString": {
-        "LeaveManagementConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; InitialCatalog=HR_Managment_DB;Integrated Security=True"
+    "ConnectionStrings": {
+        "LeaveManagementConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=HR_Managment_DB;Integrated Security=True"
     },
     "EmailSettings": {
         "ApiKey": "SendGrid_ApiKey_Here",
